# 21School

./: .gitignore  README.md
cub3d/: .gitignore  CMakeLists.txt  Makefile  README.md  main.c  main_bonus.c  map_main.cub
cub3d/get_next_line/: get_next_line.c  get_next_line.h  get_next_line_utils.c
cub3d/key_handler/: key_handler.c  key_handler.h  key_handler_private.h  mause_handler.c  moves.c  rotates.c
cub3d/list/: list.c  list.h  string_cleaner.c
cub3d/loader/: color_loader.c  game_loader.c  game_loader.h  game_loader_private.h  textures_loader.c
cub3d/mlx_adapter/: mlx_adapter.c  mlx_adapter.h
cub3d/parser/: cardinal_direction_setters.c  color_setters.c  file_reader.c  line_checkers.c  map_func.c  parser.c  parser.h  parser_private.h  settings_func.c  texture_setters.c  validator.c
cub3d/raycasting_logic/: raycasting_logic.c  raycasting_logic.h  raycasting_logic_private.h  rc_funcs.c
cub3d/utils/: numbers.c  printers.c  strings.c  utils.c  utils.h
ex_rank02/: enter.c  enterKate.c  get_next_line.h  gnl.c  printf.c  union.c  unionKate.c
ex_rank04/: main.c
ex_rank05/: .gitignore
fract-ol/: Makefile  README.md
fractol/: .gitignore  main.c
ft_irc/: .gitignore  CMakeLists.txt  Makefile  main.cpp
ft_irc/Channel/: Channel.cpp  Channel.h
ft_irc/Server/: Parser.cpp  Server.cpp  Server.h
ft_irc/User/: CommandHandlers.cpp  User.cpp  User.h
ft_irc/Utils/: Replies.h  Utils.cpp  Utils.h
ft_server/: .gitignore  Dockerfile  README.md
get_next_line/: .gitignore  README.md  get_next_line.c  get_next_line_bonus.c  get_next_line_bonus.h  get_next_line_utils.c  get_next_line_utils_bonus.c  main.c
libft/: Makefile  README.md  ft_atoi.c  ft_bzero.c  ft_calloc.c  ft_isalnum.c  ft_isalpha.c  ft_isascii.c  ft_isdigit.c  ft_isprint.c  ft_itoa.c  ft_lstadd_back.c  ft_lstadd_front.c  ft_lstclear.c  ft_lstdelone.c  ft_lstiter.c  ft_lstlast.c  ft_lstmap.c  ft_lstnew.c  ft_lstsize.c  ft_memccpy.c  ft_memchr.c  ft_memcmp.c  ft_memcpy.c  ft_memmove.c  ft_memset.c  ft_putchar_fd.c  ft_putendl_fd.c  ft_putnbr_fd.c  ft_putstr_fd.c  ft_split.c  ft_strchr.c  ft_strdup.c  ft_strjoin.c  ft_strlcat.c  ft_strlcpy.c  ft_strlen.c  ft_strmapi.c  ft_strncmp.c  ft_strnstr.c  (+6 more)
(+428 files in other folders)
